...
                  android:layout_weight="0"
                  android:background="?colorSubMenuBackground">
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content">
            <HorizontalScrollView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:orientation="horizontal" android:layout_centerHorizontal="true">
                <LinearLayout android:id="@+id/SubMenuContainer" android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal">
                    <RelativeLayout android:layout_width="70dp"
                                    android:layout_height="70dp"
                                    android:layout_marginRight="5dp">
                        <ImageButton android:id="@+id/btnTracks"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:scaleType="fitXY"
                                     android:src="@drawable/main_btn_nc_tracks"
                                     android:background="?attr/selectableItemBackgroundBorderless"
                        />
...
                                  android:maxLines="1"
                        />
                    </RelativeLayout>
                    <RelativeLayout android:layout_width="70dp"
                                    android:layout_height="70dp"
                                    android:layout_marginRight="5dp">
                        <ImageButton android:id="@+id/btnPlaylists"
                                     android:layout_width="70dp"
                                     android:layout_height="70dp"
                                     android:scaleType="fitXY"
                                     android:src="@drawable/main_btn_nc_playlists"
                                     android:background="?attr/selectableItemBackgroundBorderless"/>
                        <TextView android:layout_width="wrap_content"
...
                                  android:maxLines="1"
                        />
                    </RelativeLayout>
                    <RelativeLayout android:layout_width="70dp"
                                    android:layout_height="70dp"
                                    android:layout_marginRight="5dp">
                        <ImageButton android:id="@+id/btnArtists"
                                     android:layout_width="70dp"
                                     android:layout_height="70dp"
                                     android:scaleType="fitXY"
                                     android:src="@drawable/main_btn_nc_artists"
                                     android:background="?attr/selectableItemBackgroundBorderless"/>
                        <TextView android:layout_width="wrap_content"
...
                                  android:maxLines="1"
                        />
                    </RelativeLayout>
                    <RelativeLayout android:layout_width="70dp"
                                    android:layout_height="70dp"
                                    android:layout_marginRight="5dp">
                        <ImageButton android:id="@+id/btnAlbums"
                                     android:layout_width="70dp"
                                     android:layout_height="70dp"
                                     android:scaleType="fitXY"
                                     android:src="@drawable/main_btn_nc_albums"
                                     android:background="?attr/selectableItemBackgroundBorderless"/>
                        <TextView android:layout_width="wrap_content"
...
                                  android:layout_alignParentBottom="true"
                                  android:maxLines="1"
                        />
                    </RelativeLayout>
                    <RelativeLayout android:layout_width="70dp"
                                    android:layout_height="70dp">
                        <ImageButton android:id="@+id/btnGenres"
                                     android:layout_width="70dp"
                                     android:layout_height="70dp"
                                     android:scaleType="fitXY"
                                     android:src="@drawable/main_btn_nc_genres"
                                     android:background="?attr/selectableItemBackgroundBorderless"/>
                        <TextView android:layout_width="wrap_content"
...
    <View android:layout_width="match_parent" android:layout_height="4dp" android:background="?colorBorder"/>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <RelativeLayout android:id="@+id/songdisplay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/PlayerControls">
            <ListView android:id="@+id/mainViewport"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_marginBottom="0dp"
                      android:layout_marginTop="0dp"
                      android:layout_marginLeft="0dp"
                      android:layout_marginRight="0dp"
...
                <SeekBar android:id="@+id/songDurBar"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:max="1000"
                         android:progress="1000"
                         style="?android:attr/progressBarStyleHorizontal"
                         android:layout_below="@id/songDisplay"
                />
                <TextView android:id="@+id/songDisplay"
                          android:layout_width="match_parent"
                          android:layout_height="25dp"
                          android:text="Placeholder"
                          android:textColor="?attr/colorText"
...
