<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?colorDialogFrame"
                android:layout_marginTop="10dp">
    <RelativeLayout android:id="@+id/volBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?colorDialogBackground">
        <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_settings_t1"
                android:textColor="?colorDialogText"
                android:includeFontPadding="false"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
        />
        <SeekBar
                android:id="@+id/seekBar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="0"
                android:layout_below="@id/textView"
                android:layout_marginBottom="10dp"
        />
    </RelativeLayout>
    <RelativeLayout android:id="@+id/themeBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?colorDialogBackground"
                    android:layout_below="@id/volBox"
                    android:layout_marginTop="5dp">
        <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/misc_themes"
                android:textColor="?colorDialogText"
                android:includeFontPadding="false"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
        />
        <Spinner android:id="@+id/spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="?colorDialogText"
                 android:popupBackground="?colorDialogBackground"
                 android:layout_below="@id/textView1"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="20dp"
        />
    </RelativeLayout>
    <RelativeLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?colorDialogBackground"
                    android:layout_below="@id/themeBox"
                    android:layout_marginTop="5dp">
        <TextView
                android:id="@+id/TitleEqualizer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/misc_equalizerpreset"
                android:textColor="?colorDialogText"
                android:includeFontPadding="false"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
        />
        <Spinner android:id="@+id/spinnerEqualizer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="?colorDialogText"
                 android:popupBackground="?colorDialogBackground"
                 android:layout_below="@id/TitleEqualizer"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="20dp"
        />
    </RelativeLayout>
</RelativeLayout>
