<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/notFound"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:background="?colorViewPort">
    <TextView android:id="@+id/centerText"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="PLACEHOLDER"
              android:textSize="20dp"
              android:textColor="?colorText"
              android:layout_centerInParent="true"
              android:gravity="center"/>
</RelativeLayout>