<?xml version="1.0" encoding="UTF-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Actions -->
    <item android:id="@+id/action_delete"
          app:showAsAction="always"
          android:icon="@drawable/action_remfrompl"
          android:visible="false"/>
    <item android:id="@+id/action_addTo"
          app:showAsAction="always"
          android:icon="@drawable/action_addplaylist"
          android:visible="false">
        <menu>
            <item android:id="@+id/action_playlist_create"
                  android:title="@string/menu_options_newplaylist"
                  app:showAsAction="never"/>
        </menu>
    </item>
    <item android:id="@+id/action_search"
          android:title="@string/menu_options_search"
          app:showAsAction="always"
          android:icon="@drawable/action_search"/>

    <!-- Other -->

    <item android:id="@+id/action_settings"
          android:title="@string/menu_options_settings"
          app:showAsAction="never"/>
    <item android:id="@+id/action_sortby"
          android:title="@string/menu_options_sort"
          app:showAsAction="never"/>
    <item android:id="@+id/action_playlist_edit"
          android:title="@string/menu_options_editpl"
          app:showAsAction="never"
          android:visible="false"/>
    <item android:id="@+id/action_select_all"
          android:title="@string/menu_options_selectAll"
          app:showAsAction="never"/>
    <item android:id="@+id/action_select"
          android:title="@string/menu_options_select"
          app:showAsAction="never"/>
    <item android:id="@+id/action_cancel"
          android:title="@string/menu_options_cancelselect"
          app:showAsAction="never"
          android:visible="false"/>
</menu>
